src/main/gen/com/outskirtslabs/beancount/parser/BeancountParser.java
// This is a generated file. Not intended for manual editing.
package com.outskirtslabs.beancount.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.outskirtslabs.beancount.psi.BeancountTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;
import static com.outskirtslabs.beancount.psi.impl.BeancountPsiImplUtil.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class BeancountParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(CURRENCY_LIST, CURRENCY_MULTIPLE, CURRENCY_ONE),
    create_token_set_(ASTERISK_EXPR, LITERAL_EXPR, MINUS_EXPR, NUMBER_EXPR,
      PAREN_EXPR, PLUS_EXPR, SLASH_EXPR, UNARY_MIN,
      UNARY_PLUS),
  };

  /* ********************************************************** */
  // number_expr currency_symbol
  public static boolean amount(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "amount")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AMOUNT, "<amount>");
    r = number_expr(b, l + 1, -1);
    r = r && currency_symbol(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // number_expr currency_symbol | number_expr TILDE number_expr currency_symbol
  public static boolean amount_tolerance(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "amount_tolerance")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AMOUNT_TOLERANCE, "<amount tolerance>");
    r = amount_tolerance_0(b, l + 1);
    if (!r) r = amount_tolerance_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // number_expr currency_symbol
  private static boolean amount_tolerance_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "amount_tolerance_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = number_expr(b, l + 1, -1);
    r = r && currency_symbol(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // number_expr TILDE number_expr currency_symbol
  private static boolean amount_tolerance_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "amount_tolerance_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = number_expr(b, l + 1, -1);
    r = r && consumeToken(b, TILDE);
    r = r && number_expr(b, l + 1, -1);
    r = r && currency_symbol(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // DATE BALANCE_KEY ACCOUNT amount_tolerance end key_value_list?
  public static boolean balance(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "balance")) return false;
    if (!nextTokenIs(b, DATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DATE, BALANCE_KEY, ACCOUNT);
    r = r && amount_tolerance(b, l + 1);
    r = r && end(b, l + 1);
    r = r && balance_5(b, l + 1);
    exit_section_(b, m, BALANCE, r);
    return r;
  }

  // key_value_list?
  private static boolean balance_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "balance_5")) return false;
    key_value_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // DATE CLOSE_KEY ACCOUNT end key_value_list?
  public static boolean close(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "close")) return false;
    if (!nextTokenIs(b, DATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DATE, CLOSE_KEY, ACCOUNT);
    r = r && end(b, l + 1);
    r = r && close_4(b, l + 1);
    exit_section_(b, m, CLOSE, r);
    return r;
  }

  // key_value_list?
  private static boolean close_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "close_4")) return false;
    key_value_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // DATE COMMODITY_KEY currency_symbol end key_value_list?
  public static boolean commodity(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "commodity")) return false;
    if (!nextTokenIs(b, DATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DATE, COMMODITY_KEY);
    r = r && currency_symbol(b, l + 1);
    r = r && end(b, l + 1);
    r = r && commodity_4(b, l + 1);
    exit_section_(b, m, COMMODITY, r);
    return r;
  }

  // key_value_list?
  private static boolean commodity_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "commodity_4")) return false;
    key_value_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // maybe_number currency_symbol
  //     | number_expr maybe_currency
  //     | maybe_number HASH maybe_number currency_symbol
  public static boolean compound_amount(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_amount")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPOUND_AMOUNT, "<compound amount>");
    r = compound_amount_0(b, l + 1);
    if (!r) r = compound_amount_1(b, l + 1);
    if (!r) r = compound_amount_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // maybe_number currency_symbol
  private static boolean compound_amount_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_amount_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = maybe_number(b, l + 1);
    r = r && currency_symbol(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // number_expr maybe_currency
  private static boolean compound_amount_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_amount_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = number_expr(b, l + 1, -1);
    r = r && maybe_currency(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // maybe_number HASH maybe_number currency_symbol
  private static boolean compound_amount_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compound_amount_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = maybe_number(b, l + 1);
    r = r && consumeToken(b, HASH);
    r = r && maybe_number(b, l + 1);
    r = r && currency_symbol(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // compound_amount
  //     | DATE
  //     | STRING
  //     | ASTERISK
  public static boolean cost_comp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cost_comp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COST_COMP, "<cost comp>");
    r = compound_amount(b, l + 1);
    if (!r) r = consumeToken(b, DATE);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, ASTERISK);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // cost_comp (COMMA cost_comp)*
  public static boolean cost_comp_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cost_comp_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COST_COMP_LIST, "<cost comp list>");
    r = cost_comp(b, l + 1);
    r = r && cost_comp_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA cost_comp)*
  private static boolean cost_comp_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cost_comp_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!cost_comp_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "cost_comp_list_1", c)) break;
    }
    return true;
  }

  // COMMA cost_comp
  private static boolean cost_comp_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cost_comp_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && cost_comp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // [LCURL cost_comp_list RCURL
  //     | LCURLCURL cost_comp_list RCURLCURL]
  public static boolean cost_spec(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cost_spec")) return false;
    Marker m = enter_section_(b, l, _NONE_, COST_SPEC, "<cost spec>");
    cost_spec_0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // LCURL cost_comp_list RCURL
  //     | LCURLCURL cost_comp_list RCURLCURL
  private static boolean cost_spec_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cost_spec_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = cost_spec_0_0(b, l + 1);
    if (!r) r = cost_spec_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LCURL cost_comp_list RCURL
  private static boolean cost_spec_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cost_spec_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LCURL);
    r = r && cost_comp_list(b, l + 1);
    r = r && consumeToken(b, RCURL);
    exit_section_(b, m, null, r);
    return r;
  }

  // LCURLCURL cost_comp_list RCURLCURL
  private static boolean cost_spec_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cost_spec_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LCURLCURL);
    r = r && cost_comp_list(b, l + 1);
    r = r && consumeToken(b, RCURLCURL);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CURRENCY
  public static boolean currency_symbol(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "currency_symbol")) return false;
    if (!nextTokenIs(b, CURRENCY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CURRENCY);
    exit_section_(b, m, CURRENCY_SYMBOL, r);
    return r;
  }

  /* ********************************************************** */
  // DATE CUSTOM_KEY STRING custom_value_list end key_value_list?
  public static boolean custom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "custom")) return false;
    if (!nextTokenIs(b, DATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DATE, CUSTOM_KEY, STRING);
    r = r && custom_value_list(b, l + 1);
    r = r && end(b, l + 1);
    r = r && custom_5(b, l + 1);
    exit_section_(b, m, CUSTOM, r);
    return r;
  }

  // key_value_list?
  private static boolean custom_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "custom_5")) return false;
    key_value_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // STRING
  //     | DATE
  //     | BOOL
  //     | amount
  //     | number_expr
  //     | ACCOUNT
  public static boolean custom_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "custom_value")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CUSTOM_VALUE, "<custom value>");
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, DATE);
    if (!r) r = consumeToken(b, BOOL);
    if (!r) r = amount(b, l + 1);
    if (!r) r = number_expr(b, l + 1, -1);
    if (!r) r = consumeToken(b, ACCOUNT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // custom_value*
  public static boolean custom_value_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "custom_value_list")) return false;
    Marker m = enter_section_(b, l, _NONE_, CUSTOM_VALUE_LIST, "<custom value list>");
    while (true) {
      int c = current_position_(b);
      if (!custom_value(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "custom_value_list", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // (directive | entry | end | error)*
  public static boolean declarations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declarations")) return false;
    Marker m = enter_section_(b, l, _NONE_, DECLARATIONS, "<declarations>");
    while (true) {
      int c = current_position_(b);
      if (!declarations_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "declarations", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // directive | entry | end | error
  private static boolean declarations_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declarations_0")) return false;
    boolean r;
    r = directive(b, l + 1);
    if (!r) r = entry(b, l + 1);
    if (!r) r = end(b, l + 1);
    if (!r) r = consumeToken(b, ERROR);
    return r;
  }

  /* ********************************************************** */
  // pushtag
  //     | poptag
  //     | pushmeta
  //     | popmeta
  //     | option
  //     | include
  //     | plugin
  public static boolean directive(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DIRECTIVE, "<directive>");
    r = pushtag(b, l + 1);
    if (!r) r = poptag(b, l + 1);
    if (!r) r = pushmeta(b, l + 1);
    if (!r) r = popmeta(b, l + 1);
    if (!r) r = option(b, l + 1);
    if (!r) r = include(b, l + 1);
    if (!r) r = plugin(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // DATE DOCUMENT_KEY ACCOUNT filename tags_links end key_value_list?
  public static boolean document(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "document")) return false;
    if (!nextTokenIs(b, DATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DATE, DOCUMENT_KEY, ACCOUNT);
    r = r && filename(b, l + 1);
    r = r && tags_links(b, l + 1);
    r = r && end(b, l + 1);
    r = r && document_6(b, l + 1);
    exit_section_(b, m, DOCUMENT, r);
    return r;
  }

  // key_value_list?
  private static boolean document_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "document_6")) return false;
    key_value_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // EOL
  public static boolean end(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "end")) return false;
    if (!nextTokenIs(b, EOL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EOL);
    exit_section_(b, m, END, r);
    return r;
  }

  /* ********************************************************** */
  // (transaction
  //     | balance
  //     | open
  //     | close
  //     | pad
  //     | document
  //     | note
  //     | event
  //     | price
  //     | commodity
  //     | query
  //     | custom) COMMENT?
  public static boolean entry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entry")) return false;
    if (!nextTokenIs(b, DATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = entry_0(b, l + 1);
    r = r && entry_1(b, l + 1);
    exit_section_(b, m, ENTRY, r);
    return r;
  }

  // transaction
  //     | balance
  //     | open
  //     | close
  //     | pad
  //     | document
  //     | note
  //     | event
  //     | price
  //     | commodity
  //     | query
  //     | custom
  private static boolean entry_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entry_0")) return false;
    boolean r;
    r = transaction(b, l + 1);
    if (!r) r = balance(b, l + 1);
    if (!r) r = open(b, l + 1);
    if (!r) r = close(b, l + 1);
    if (!r) r = pad(b, l + 1);
    if (!r) r = document(b, l + 1);
    if (!r) r = note(b, l + 1);
    if (!r) r = event(b, l + 1);
    if (!r) r = price(b, l + 1);
    if (!r) r = commodity(b, l + 1);
    if (!r) r = query(b, l + 1);
    if (!r) r = custom(b, l + 1);
    return r;
  }

  // COMMENT?
  private static boolean entry_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entry_1")) return false;
    consumeToken(b, COMMENT);
    return true;
  }

  /* ********************************************************** */
  // DATE EVENT_KEY STRING STRING end key_value_list?
  public static boolean event(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event")) return false;
    if (!nextTokenIs(b, DATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DATE, EVENT_KEY, STRING, STRING);
    r = r && end(b, l + 1);
    r = r && event_5(b, l + 1);
    exit_section_(b, m, EVENT, r);
    return r;
  }

  // key_value_list?
  private static boolean event_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_5")) return false;
    key_value_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // declarations end?
  static boolean file(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declarations(b, l + 1);
    r = r && file_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // end?
  private static boolean file_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_1")) return false;
    end(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // STRING
  public static boolean filename(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "filename")) return false;
    if (!nextTokenIs(b, STRING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STRING);
    exit_section_(b, m, FILENAME, r);
    return r;
  }

  /* ********************************************************** */
  // INCLUDE_KEY STRING end
  public static boolean include(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "include")) return false;
    if (!nextTokenIs(b, INCLUDE_KEY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, INCLUDE_KEY, STRING);
    r = r && end(b, l + 1);
    exit_section_(b, m, INCLUDE, r);
    return r;
  }

  /* ********************************************************** */
  // maybe_number maybe_currency
  public static boolean incomplete_amount(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "incomplete_amount")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INCOMPLETE_AMOUNT, "<incomplete amount>");
    r = maybe_number(b, l + 1);
    r = r && maybe_currency(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // KEY key_value_value
  public static boolean key_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "key_value")) return false;
    if (!nextTokenIs(b, KEY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEY);
    r = r && key_value_value(b, l + 1);
    exit_section_(b, m, KEY_VALUE, r);
    return r;
  }

  /* ********************************************************** */
  // INDENT key_value end
  public static boolean key_value_line(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "key_value_line")) return false;
    if (!nextTokenIs(b, INDENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, INDENT);
    r = r && key_value(b, l + 1);
    r = r && end(b, l + 1);
    exit_section_(b, m, KEY_VALUE_LINE, r);
    return r;
  }

  /* ********************************************************** */
  // (INDENT end | key_value_line)+
  public static boolean key_value_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "key_value_list")) return false;
    if (!nextTokenIs(b, INDENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = key_value_list_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!key_value_list_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "key_value_list", c)) break;
    }
    exit_section_(b, m, KEY_VALUE_LIST, r);
    return r;
  }

  // INDENT end | key_value_line
  private static boolean key_value_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "key_value_list_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = key_value_list_0_0(b, l + 1);
    if (!r) r = key_value_line(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // INDENT end
  private static boolean key_value_list_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "key_value_list_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, INDENT);
    r = r && end(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // [STRING
  //     | ACCOUNT
  //     | DATE
  //     | currency_symbol
  //     | TAG
  //     | BOOL
  //     | NONE
  //     | number_expr
  //     | amount]
  public static boolean key_value_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "key_value_value")) return false;
    Marker m = enter_section_(b, l, _NONE_, KEY_VALUE_VALUE, "<key value value>");
    key_value_value_0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // STRING
  //     | ACCOUNT
  //     | DATE
  //     | currency_symbol
  //     | TAG
  //     | BOOL
  //     | NONE
  //     | number_expr
  //     | amount
  private static boolean key_value_value_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "key_value_value_0")) return false;
    boolean r;
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, ACCOUNT);
    if (!r) r = consumeToken(b, DATE);
    if (!r) r = currency_symbol(b, l + 1);
    if (!r) r = consumeToken(b, TAG);
    if (!r) r = consumeToken(b, BOOL);
    if (!r) r = consumeToken(b, NONE);
    if (!r) r = number_expr(b, l + 1, -1);
    if (!r) r = amount(b, l + 1);
    return r;
  }
